src/objects/Function__c.object
<CustomObject>
    <description>The field is used to track corporate events and invitees that have accepted, declined and attended the function.</description>
    <fields>
        <fullName>Begin_Date__c</fullName>
        <description>The date and time that the function starts.</description>
        <inlineHelpText>The date and time that the function starts.</inlineHelpText>
        <label>Begin Date</label>
        <required>true</required>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>End_Date__c</fullName>
        <description>The date and time that the function ends.</description>
        <inlineHelpText>The date and time that the function ends.</inlineHelpText>
        <label>End Date</label>
        <required>true</required>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Function_Budget__c</fullName>
        <label>Function Budget</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Function_Description__c</fullName>
        <label>Function Description</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Function_Status__c</fullName>
        <label>Function Status</label>
        <required>true</required>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Planned</fullName>
                </value>
                <value>
                    <fullName>Held</fullName>
                </value>
                <value>
                    <fullName>Cancelled</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Zoom_User_ID__c</fullName>
        <description>User ID that will create the Webinar and used in the OAUTH workflow</description>
        <inlineHelpText>User ID that will create the Webinar and used in the OAUTH workflow</inlineHelpText>
        <label>Zoom User ID</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <label>Function</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Function Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Functions</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>